Fix scrollbars appearing on animation

--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   position: relative;
   font-size: 0;
+  overflow: hidden;
 }
 
 .cube-wrap {
@@ -25,7 +26,7 @@
   transition: -webkit-transform 1s;
   transition: -moz-transform 1s;
   transition: -o-transform 1s;
-  transition: transform 1s; 
+  transition: transform 1s;
 
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
@@ -50,82 +51,82 @@
   background-size: 90%;
 }
 
-.cube .front  { 
-  -webkit-transform: translateZ( 50px ); 
-  -moz-transform: translateZ( 50px ); 
-  -o-transform: translateZ( 50px ); 
-  transform: translateZ( 50px ); 
+.cube .front  {
+  -webkit-transform: translateZ( 50px );
+  -moz-transform: translateZ( 50px );
+  -o-transform: translateZ( 50px );
+  transform: translateZ( 50px );
   background-image: url(../img/chipmunk.gif);
 }
-.cube .back   { 
-  -webkit-transform: rotateX( -180deg ) translateZ( 50px ); 
-  -moz-transform: rotateX( -180deg ) translateZ( 50px ); 
-  -o-transform: rotateX( -180deg ) translateZ( 50px ); 
-  transform: rotateX( -180deg ) translateZ( 50px ); 
+.cube .back   {
+  -webkit-transform: rotateX( -180deg ) translateZ( 50px );
+  -moz-transform: rotateX( -180deg ) translateZ( 50px );
+  -o-transform: rotateX( -180deg ) translateZ( 50px );
+  transform: rotateX( -180deg ) translateZ( 50px );
   background-image: url(../img/three_hampsters.gif);
 }
 .cube .right  {
-  -webkit-transform: rotateY( 90deg ) translateZ( 50px ); 
-  -moz-transform: rotateY( 90deg ) translateZ( 50px ); 
-  -o-transform: rotateY( 90deg ) translateZ( 50px ); 
-  transform: rotateY( 90deg ) translateZ( 50px ); 
+  -webkit-transform: rotateY( 90deg ) translateZ( 50px );
+  -moz-transform: rotateY( 90deg ) translateZ( 50px );
+  -o-transform: rotateY( 90deg ) translateZ( 50px );
+  transform: rotateY( 90deg ) translateZ( 50px );
   background-image: url(../img/three_hampsters.gif);
 }
-.cube .left   { 
-  -webkit-transform: rotateY( -90deg ) translateZ( 50px ); 
-  -moz-transform: rotateY( -90deg ) translateZ( 50px ); 
-  -o-transform: rotateY( -90deg ) translateZ( 50px ); 
-  transform: rotateY( -90deg ) translateZ( 50px ); 
+.cube .left   {
+  -webkit-transform: rotateY( -90deg ) translateZ( 50px );
+  -moz-transform: rotateY( -90deg ) translateZ( 50px );
+  -o-transform: rotateY( -90deg ) translateZ( 50px );
+  transform: rotateY( -90deg ) translateZ( 50px );
   background-image: url(../img/spinning_hampster.gif);
 }
 .cube .top    {
-  -webkit-transform: rotateX( 90deg ) translateZ( 50px ); 
-  -moz-transform: rotateX( 90deg ) translateZ( 50px ); 
-  -o-transform: rotateX( 90deg ) translateZ( 50px ); 
-  transform: rotateX( 90deg ) translateZ( 50px ); 
+  -webkit-transform: rotateX( 90deg ) translateZ( 50px );
+  -moz-transform: rotateX( 90deg ) translateZ( 50px );
+  -o-transform: rotateX( 90deg ) translateZ( 50px );
+  transform: rotateX( 90deg ) translateZ( 50px );
   background-image: url(../img/outlined_hampster.gif);
 }
 .cube .bottom {
-  -webkit-transform: rotateX( -90deg ) translateZ( 50px ); 
-  -moz-transform: rotateX( -90deg ) translateZ( 50px ); 
-  -o-transform: rotateX( -90deg ) translateZ( 50px ); 
-  transform: rotateX( -90deg ) translateZ( 50px ); 
+  -webkit-transform: rotateX( -90deg ) translateZ( 50px );
+  -moz-transform: rotateX( -90deg ) translateZ( 50px );
+  -o-transform: rotateX( -90deg ) translateZ( 50px );
+  transform: rotateX( -90deg ) translateZ( 50px );
   background-image: url(../img/spinning_hampster.gif);
 }
 
-.cube.show-front  { 
-  -webkit-transform: translateZ( 50px ); 
-  -moz-transform: translateZ( 50px ); 
+.cube.show-front  {
+  -webkit-transform: translateZ( 50px );
+  -moz-transform: translateZ( 50px );
   -o-transform: translateZ( 50px );
-  transform: translateZ(-50px); 
+  transform: translateZ(-50px);
 }
-.cube.show-back   { 
-  -webkit-transform: translateZ(-50px) rotateX( -180deg ); 
-  -moz-transform: translateZ(-50px) rotateX( -180deg ); 
-  -o-transform: translateZ(-50px) rotateX( -180deg ); 
-  transform: translateZ(-50px) rotateX( -180deg ); 
+.cube.show-back   {
+  -webkit-transform: translateZ(-50px) rotateX( -180deg );
+  -moz-transform: translateZ(-50px) rotateX( -180deg );
+  -o-transform: translateZ(-50px) rotateX( -180deg );
+  transform: translateZ(-50px) rotateX( -180deg );
 }
-.cube.show-right  { 
-  -webkit-transform: translateZ(-50px) rotateY( 90deg ); 
-  -moz-transform: translateZ(-50px) rotateY( 90deg ); 
-  -o-transform: translateZ(-50px) rotateY( 90deg ); 
-  transform: translateZ(-50px) rotateY( 90deg ); 
+.cube.show-right  {
+  -webkit-transform: translateZ(-50px) rotateY( 90deg );
+  -moz-transform: translateZ(-50px) rotateY( 90deg );
+  -o-transform: translateZ(-50px) rotateY( 90deg );
+  transform: translateZ(-50px) rotateY( 90deg );
 }
-.cube.show-left   { 
-  -webkit-transform: translateZ(-50px) rotateY( 90deg ); 
-  -moz-transform: translateZ(-50px) rotateY( 90deg ); 
-  -o-transform: translateZ(-50px) rotateY( 90deg ); 
-  transform: translateZ(-50px) rotateY( -90deg ); 
+.cube.show-left   {
+  -webkit-transform: translateZ(-50px) rotateY( 90deg );
+  -moz-transform: translateZ(-50px) rotateY( 90deg );
+  -o-transform: translateZ(-50px) rotateY( 90deg );
+  transform: translateZ(-50px) rotateY( -90deg );
 }
-.cube.show-top    { 
-  -webkit-transform: translateZ(-50px) rotateX( 90deg ); 
-  -moz-transform: translateZ(-50px) rotateX( 90deg ); 
-  -o-transform: translateZ(-50px) rotateX( 90deg ); 
-  transform: translateZ(-50px) rotateX( 90deg ); 
+.cube.show-top    {
+  -webkit-transform: translateZ(-50px) rotateX( 90deg );
+  -moz-transform: translateZ(-50px) rotateX( 90deg );
+  -o-transform: translateZ(-50px) rotateX( 90deg );
+  transform: translateZ(-50px) rotateX( 90deg );
 }
-.cube.show-bottom { 
-  -webkit-transform: translateZ(-50px) rotateX( -90deg ); 
-  -moz-transform: translateZ(-50px) rotateX( -90deg ); 
-  -o-transform: translateZ(-50px) rotateX( -90deg ); 
-  transform: translateZ(-50px) rotateX( -90deg ); 
+.cube.show-bottom {
+  -webkit-transform: translateZ(-50px) rotateX( -90deg );
+  -moz-transform: translateZ(-50px) rotateX( -90deg );
+  -o-transform: translateZ(-50px) rotateX( -90deg );
+  transform: translateZ(-50px) rotateX( -90deg );
 }
